# sprout

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/shortcuts/: brc.md  review.md  tn.md  uat.md
.github/workflows/: changelog-check.yml  ci.yml  release.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md
docs/: release-workflow.md
docs/sprout-cli/: overview.md  usage.md
sample/monorepo/: .env.example  README.md
sample/monorepo/backend/: .env.example
sample/monorepo/frontend/: .env.example
sample/monorepo/shared/: .env.example
src/sprout/: __init__.py  cli.py  exceptions.py  utils.py
src/sprout/commands/: create.py  envfile.py  ls.py  path.py  rm.py
tests/: test_commands.py  test_envfile.py  test_integration.py  test_multi_env.py  test_utils.py
